# Rubik-s-cube

./: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Shader.cpp  Shader.h  main.cpp  text.txt
shaders/: fragmentShader.glslf  vertixShader.glslv
